# phosphor-networkd

./: .clang-tidy  .gitignore  0001-use-new-sdbus-camelcase.patch  60-phosphor-networkd-default.network.in  60-phosphor-networkd-eth1-default.network.in  MAINTAINERS  Makefile  Makefile.am  OWNERS  README.md  argument.cpp  argument.hpp  bootstrap.sh  config_parser.cpp  config_parser.hpp  configure.ac  dhcp_configuration.cpp  dhcp_configuration.hpp  dns_updater.cpp  dns_updater.hpp  elog-errors.hpp  ethernet_interface.cpp  ethernet_interface.hpp  groups  ipaddress.cpp  ipaddress.hpp  lhis  logman.py  meson.build  meson.options  meson_options.txt  ncsi-netlink.service  ncsi_netlink_main.cpp  ncsi_util.cpp  ncsi_util.hpp  neighbor.cpp  neighbor.hpp  netlink.cpp  netman.py  netman_watch_dns.c  (+27 more)
conf/: network-manager.conf  network-manager.ini
docs/: IPv6-Network-Configuration.md  Network-Configuration.md
hyp-network-manager/: Makefile.am  hyp_ethernet_interface.cpp  hyp_ethernet_interface.hpp  hyp_ip_interface.cpp  hyp_ip_interface.hpp  hyp_network_manager.cpp  hyp_network_manager.hpp  hyp_network_manager_main.cpp  xyz.openbmc_project.Network.Hypervisor.service
new/: server.cpp  server.hpp
src/: argument.cpp  argument.hpp  bond.cpp  bond.hpp  config_parser.cpp  config_parser.hpp  dhcp_configuration.cpp  dhcp_configuration.hpp  dns_updater.cpp  ethernet_interface.cpp  ethernet_interface.hpp  firewall_configuration.cpp  firewall_configuration.hpp  hostname_manager.cpp  hostname_manager.hpp  inventory_mac.cpp  inventory_mac.hpp  ipaddress.cpp  ipaddress.hpp  meson.build  ncsi_callback_registry.hpp  ncsi_cmd.cpp  ncsi_cmd_callback.cpp  ncsi_cmd_callback.hpp  ncsi_disable_broadcast.cpp  ncsi_disable_broadcast.hpp  ncsi_disable_multicast.cpp  ncsi_disable_multicast.hpp  ncsi_disable_vlan.cpp  ncsi_disable_vlan.hpp  ncsi_disable_vlan_callback.cpp  ncsi_disable_vlan_callback.hpp  ncsi_get_cap.cpp  ncsi_get_cap.hpp  ncsi_info.cpp  ncsi_info.hpp  ncsi_info_main.cpp  ncsi_netlink_main.cpp  ncsi_oem_cmd_callback.hpp  ncsi_pass_stat.cpp  (+42 more)
src/hypervisor-network-mgr-src/: hyp_ethernet_interface.cpp  hyp_ethernet_interface.hpp  hyp_ip_interface.cpp  hyp_ip_interface.hpp  hyp_network_manager.cpp  hyp_network_manager.hpp  hyp_network_manager_main.cpp  meson.build  xyz.openbmc_project.Network.Hypervisor.service.in
src/ibm/: meson.build
src/ibm/hypervisor-network-mgr-src/: .hyp_network_manager.hpp.swp  hyp_ethernet_interface.cpp  hyp_ethernet_interface.hpp  hyp_ip_interface.cpp  hyp_ip_interface.hpp  hyp_network_manager.cpp  hyp_network_manager.hpp  hyp_network_manager_main.cpp  hyp_nw_config_serialize.cpp  hyp_nw_config_serialize.hpp  hyp_sys_config.cpp  hyp_sys_config.hpp  meson.build  xyz.openbmc_project.Network.Hypervisor.service.in
src/lldp/: lldp_interface.cpp  lldp_interface.hpp  lldp_manager.cpp  lldp_manager.hpp  lldp_manager_main.cpp  lldp_neighbor.cpp  lldp_neighbor.hpp  lldp_tlvs.cpp  lldp_tlvs.hpp  lldp_utils.cpp  lldp_utils.hpp  meson.build  xyz.openbmc_project.LLDP.service.in
subprojects/: nlohmann_json.wrap  phosphor-dbus-interfaces.wrap  sdbusplus.wrap  stdplus.wrap
test/: Makefile.am  TestConfigParser.cpp  TestUtil.cpp  global_network_objects.cpp  global_objects.cpp  meson.build  mock_ethernet_interface.hpp  mock_network_manager.hpp  mock_syscall.cpp  mock_syscall.hpp  run_with_tmp.sh  test_config_parser.cpp  test_dhcp_configuration.cpp  test_dns_updater.cpp  test_ethernet_interface.cpp  test_ipaddress.cpp  test_neighbor.cpp  test_netlink.cpp  test_network_manager.cpp  test_network_manager.hpp  test_rtnetlink.cpp  test_static_gateway.cpp  test_system_queries.cpp  test_types.cpp  test_util.cpp  test_vlan_interface.cpp  test_watch.cpp  testutil.cpp  testutil.hpp
test/ibm/hypervisor-network-mgr-test/: meson.build  mock_hyp_ethernet_interface.hpp  mock_hyp_network_manager.hpp  mock_hyp_sys_config.hpp  test_hyp_ethernet_interface.cpp  test_hyp_network_manager.cpp  test_hyp_sys_config.cpp
xyz/openbmc_project/Network/: Common.errors.yaml  Common.metadata.yaml  meson.build
xyz/openbmc_project/Network/IP/: Create.interface.yaml
xyz/openbmc_project/Network/IP/Create/: meson.build
xyz/openbmc_project/Network/Internal/: Refresh.interface.yaml
xyz/openbmc_project/Network/Neighbor/: CreateStatic.interface.yaml
xyz/openbmc_project/Network/Neighbor/CreateStatic/: meson.build
xyz/openbmc_project/Network/VLAN/: Create.interface.yaml
xyz/openbmc_project/Network/VLAN/Create/: meson.build
xyz/openbmc_project/Network/VLANInterface/: Create.interface.yaml
yaml/xyz/openbmc_project/Network/Bond/: Create.interface.yaml
yaml/xyz/openbmc_project/Network/IP/: Create.interface.yaml
yaml/xyz/openbmc_project/Network/Neighbor/: CreateStatic.interface.yaml
yaml/xyz/openbmc_project/Network/StaticRoute/: CreateStaticRoute.interface.yaml
yaml/xyz/openbmc_project/Network/VLAN/: Create.interface.yaml
