option('tests', type: 'feature', description: 'Build tests')

option('uboot-env', type: 'boolean',
       description: 'Update u-boot env for MAC changes')
option('default-link-local-autoconf', type: 'boolean',
       description: 'Enable link local autoconfiguration by default')
option('default-ipv6-accept-ra', type: 'boolean',
       description: 'Accept router advertisements by default')
option('sync-mac', type: 'boolean',
       description: 'Sync mac address with phosphor-inventory-manager')
option('hyp-nw-config', type : 'boolean',
       description : 'ibm-oem: Enable the hypervisor network manager')
option('persist-mac', type: 'boolean',
       description: 'Permit the MAC address to be written to the systemd.network config')
